# fyers-websockets

./: .env  .env.example  INSTALLATION_GUIDE.md  README.md  app.py  database.py  generate_token.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
static/css/: styles.css
templates/: index.html
