[project]
name = "fyers-websocket-depth"
version = "2.0.0"
description = "Fyers Market Depth WebSocket Application with SEBI Compliance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "OpenAlgo", email = "openalgo@example.com" }
]
keywords = ["fyers", "market-depth", "websocket", "trading", "sebi-compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "Flask==3.1.0",
    "Flask-SocketIO==5.5.1",
    "greenlet==3.2.3",
    "grpcio==1.70.0",
    "grpcio-tools==1.70.0",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "numpy==2.3.1",
    "protobuf==5.29.3",
    "pycparser==2.22",
    "python-dotenv==1.0.1",
    "python-engineio==4.11.2",
    "python-socketio==5.12.1",
    "requests==2.32.4",
    "setuptools==75.8.0",
    "simple-websocket==1.1.0",
    "SQLAlchemy==2.0.41",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "websockets==11.0.3",
    "Werkzeug==3.1.3",
    "wsproto==1.2.0",
    "APScheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fyers-websocket-depth"
Documentation = "https://github.com/yourusername/fyers-websocket-depth#readme"
Repository = "https://github.com/yourusername/fyers-websocket-depth.git"
Issues = "https://github.com/yourusername/fyers-websocket-depth/issues"

[project.scripts]
fyers-depth = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | build
  | dist
  | msg_pb2\.py
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
